<resources>
    <string name="app_name">TourismAppTwo</string>
    <string name="itinerary">Itinerary</string>
    <string name="settings">Settings</string>
    <string name="nearby">Nearby</string>
    <string name="welcome_to_singapore">Welcome to Singapore</string>
    <string name="homewallpaper">HomeWallpaper</string>
    <string name="night_mode">Night Mode</string>
    <string name="dark_theme">Enable Dark Theme</string>
    <string name="notifications">Notifications</string>
    <string name="receive_notifications">Enable notifications when minimized</string>
    <string name="languages">Language</string>
    <string name="title_day_detail">Language options</string>

    <string name="about">about</string>
    <string name="title_activity_itinerary_page">ItineraryPage</string>
    <string name="preferences">Preferences</string>
    <string name="email">Email</string>
    <string name="emailrequest">Email address</string>
    <string name="defaultemail">\@mymail.sutd.edu.sg</string>
    <string name="requestemail">What is your email address?</string>
    <string name="status">Status</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CurrentLocation">You are currently in </string>
    <string name="maplocation">Singapore</string>
    <string name="twenty">20</string>
    <string name="dailybudgetquestion">What is your Daily Budget?</string>

    <string-array name="locations_genre_array">
        <item>Entertainment</item>
        <item>Food</item>
        <item>Museum</item>
        <item>Outdoor</item>
        <item>Place of Worship</item>
    </string-array>
</resources>
