<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="night_mode"
        android:title="@string/night_mode"
        android:summary="@string/dark_theme"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="notifications_setting"
        android:title="@string/notifications"
        android:summary="@string/receive_notifications"
        android:defaultValue="false" />
    <ListPreference
        android:key="language_setting"
        android:title="@string/languages"
        android:dialogTitle="@string/title_day_detail"
        android:entries="@array/language_list"
        android:entryValues="@array/save_language_list"
        android:defaultValue="@string/english" />
</PreferenceScreen>